resources/app-sre-stage/observatorium-stage/observatorium-api-stage.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/timeout: 5m
  labels:
    app: observatorium-api
  name: observatorium-api
spec:
  host: observatorium.api.stage.openshift.com
  port:
    targetPort: public
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: observatorium-observatorium-api
    weight: 100
  wildcardPolicy: None
