resources/app-sre-stage/observatorium-stage/observatorium-conprof.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: conprof
  name: observatorium-conprof
spec:
  host: observatorium-conprof.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: conprof
    weight: 100
  wildcardPolicy: None
