resources/app-sre-stage/observatorium-stage/observatorium-jaeger-stage.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jaeger
  name: observatorium-jaeger
spec:
  host: observatorium-jaeger-observatorium.api.stage.openshift.com
  # TODO(kakkoyun): Uncomment while migrating.
  # host: observatorium-jaeger.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: jaeger-query
    weight: 100
  wildcardPolicy: None
