resources/app-sre-stage/observatorium-stage/observatorium-parca.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: parca
  name: observatorium-parca
spec:
  host: conprof.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: parca
    weight: 100
  wildcardPolicy: None
